Add distinction between 1.13 and 1.15 in treasure map map

--- a/static/biomes.html
+++ b/static/biomes.html
@@ -80,7 +80,12 @@
                     <option value="1.13">Java 1.13</option>
                     <option value="1.14">Java 1.14</option>
                     <option value="1.15">Java 1.15</option>
-                    <option value="TreasureMap">Java 1.13+ Treasure Map</option>
+                    <option value="TreasureMap13"
+                        >Java 1.13-1.14 Treasure Map</option
+                    >
+                    <option value="TreasureMap15"
+                        >Java 1.15+ Treasure Map</option
+                    >
                 </select>
                 <a id="download" download="biome_map.png">
                     <button type="button" onClick="download()">
@@ -253,7 +258,8 @@
                     minecraft_version == "1.13" ||
                     minecraft_version == "1.14" ||
                     minecraft_version == "1.15" ||
-                    minecraft_version == "TreasureMap"
+                    minecraft_version == "TreasureMap13" ||
+                    minecraft_version == "TreasureMap15"
                 ) {
                     scales = scales113;
                 } else {
@@ -332,7 +338,8 @@
                         (new_v == "1.13" ||
                             new_v == "1.14" ||
                             new_v == "1.15" ||
-                            new_v == "TreasureMap")
+                            new_v == "TreasureMap13" ||
+                            new_v == "TreasureMap15")
                     ) {
                         if (lastLayer == 42) {
                             updateWithLayerPlus(50 - 42);
@@ -345,7 +352,8 @@
                         (old_v == "1.13" ||
                             old_v == "1.14" ||
                             old_v == "1.15" ||
-                            old_v == "TreasureMap") &&
+                            old_v == "TreasureMap13" ||
+                            old_v == "TreasureMap15") &&
                         new_v == "1.7"
                     ) {
                         if (lastLayer == 51) {
@@ -376,7 +384,8 @@
                     minecraft_version == "1.13" ||
                     minecraft_version == "1.14" ||
                     minecraft_version == "1.15" ||
-                    minecraft_version == "TreasureMap"
+                    minecraft_version == "TreasureMap13" ||
+                    minecraft_version == "TreasureMap15"
                 ) {
                     scales = scales113;
                     num_layers = 51;
