Fix name of wasm file after moving the code to a separate folder
Issue introduced in fed526f0dacd39ede963824a1269597690ec03a0

--- a/static/anvil.html
+++ b/static/anvil.html
@@ -128,7 +128,7 @@ Found seeds will appear here.</textarea
                 >
             </div>
         </div>
-        <script type="text/javascript" src="wasm_gui.js"></script>
+        <script type="text/javascript" src="slime_seed_finder_web.js"></script>
         <script type="text/javascript" src="anvil.js"></script>
     </body>
 </html>
