--- a/static/rivers.html
+++ b/static/rivers.html
@@ -262,7 +262,7 @@ Found seeds will appear here.</textarea
         </div>
         <script type="text/javascript" src="rivers_common.js"></script>
         <script type="text/javascript" src="rivers_select_map.js"></script>
-        <script type="text/javascript" src="wasm_gui.js"></script>
+        <script type="text/javascript" src="slime_seed_finder_web.js"></script>
         <script type="text/javascript" src="rivers.js"></script>
     </body>
 </html>
