--- a/static/treasure.html
+++ b/static/treasure.html
@@ -220,7 +220,7 @@ Found seeds will appear here.</textarea
         </div>
         <script type="text/javascript" src="treasure_common.js"></script>
         <script type="text/javascript" src="treasure_select_map.js"></script>
-        <script type="text/javascript" src="wasm_gui.js"></script>
+        <script type="text/javascript" src="slime_seed_finder_web.js"></script>
         <script type="text/javascript" src="treasure.js"></script>
     </body>
 </html>
