--- a/static/anvil.html
+++ b/static/anvil.html
@@ -100,21 +100,39 @@
                 <input type="file" id="filepicker" accept=".mca,.zip" />
             </div>
             <div class="card" style="grid-column: 1 / 2; grid-row: 3 / 4;">
-                Choose the minecraft version used to GENERATE the world.<br />
+                Select the minecraft version used to PLAY the world.<br />
+                This is the version you select on the launcher, the version you
+                see on the F3 screen.<br />
+                <select id="minecraftPlayVersion">
+                    <option value="1.14" selected>Java 1.7 - 1.14</option>
+                    <option value="1.15">Java 1.15</option>
+                </select>
+                <!-- TODO: Only show this div if the selected minecraftPlayVersion is 1.15 -->
+                <div id="1.15-help">
+                    Starting from 1.15, the minecraft server sends the hash of
+                    the world seed to the client. With this hash, the search
+                    will be much faster. Enter it in decimal format, or leave
+                    the field blank:<br />
+                    <input id="worldSeedHash" />
+                </div>
+            </div>
+            <div class="card" style="grid-column: 1 / 2; grid-row: 4 / 5;">
+                Select the minecraft version used to GENERATE the world.<br />
                 This may be older than the version used to play it.<br />
                 You can guess the version based on these features:<br />
                 <!-- TODO: the program also could guess the version based on this features... -->
                 Boring oceans: 1.7 - 1.12<br />
                 Fancy oceans: 1.13<br />
-                New villages: 1.14<br /><br />
-                <select id="minecraftVersion">
+                New villages: 1.14<br />
+                Bees: 1.15<br /><br />
+                <select id="minecraftGenerateVersion">
                     <option value="1.7">Java 1.7 - 1.12</option>
                     <option value="1.13">Java 1.13</option>
                     <option value="1.14" selected>Java 1.14</option>
                     <option value="1.15">Java 1.15</option>
                 </select>
             </div>
-            <div class="card" style="grid-column: 1 / 2; grid-row: 4 / 5;">
+            <div class="card" style="grid-column: 1 / 2; grid-row: 5 / 6;">
                 Start the seed search.<br />
                 This should take no more than 5 minutes.<br />
                 If you don't see any progress after 1 minute, the program
@@ -122,7 +140,7 @@
                 All the errors go to the developer console.<br /><br />
                 <button id="comphdl_start" onClick="runGui()">RUN!</button>
             </div>
-            <div style="grid-column: 1 / 2; grid-row: 5 / 6;">
+            <div style="grid-column: 1 / 2; grid-row: 6 / 7;">
                 <textarea id="output_textarea" class="code" rows="20" readonly>
 Found seeds will appear here.</textarea
                 >
