Fix index.html demo
It has been broken since commit 79333b6d9048e69af188b96b806bd69bcd3811d5

--- a/static/index.html
+++ b/static/index.html
@@ -93,15 +93,16 @@ Found 64-bit seeds will appear here.</textarea
         <script src="select_map.js"></script>
         <script type="text/javascript" src="slime_seed_finder_web.js"></script>
         <script>
+            let myWorker = null;
             if (window.Worker) {
-                let myWorker = new Worker("worker.js");
+                myWorker = new Worker("worker.js");
             }
             function runGui() {
                 let seltextarea = document.getElementById("selection_output");
                 let seedInfo = JSON.parse(seltextarea.value);
                 let outta = document.getElementById("output_textarea");
                 outta.value = "Calculating...";
-                if (window.Worker) {
+                if (myWorker) {
                     myWorker.postMessage({ seedInfo: seedInfo });
                     console.log("Message posted to worker");
                     myWorker.onmessage = function(e) {
