Add momentum to canvas scrolling

--- a/static/index.html
+++ b/static/index.html
@@ -89,6 +89,7 @@ Found 64-bit seeds will appear here.</textarea
             >
         </div>
 
+        <script src="impetus.js"></script>
         <script src="common.js"></script>
         <script src="select_map.js"></script>
         <script type="text/javascript" src="slime_seed_finder_web.js"></script>
