--- a/static/biomes.html
+++ b/static/biomes.html
@@ -100,6 +100,7 @@
         </div>
 
         <div style="clear: both;"></div>
+        <script src="impetus.js"></script>
         <script src="common.js"></script>
         <script src="fragment_map.js"></script>
         <script type="text/javascript" src="slime_seed_finder_web.js"></script>
