--- a/static/treasure.html
+++ b/static/treasure.html
@@ -76,6 +76,8 @@
             style="display: grid; grid-auto-flow: dense; align-items: center;"
         >
             <div style="grid-column: 1 / 3; grid-row: 1 / 2;">
+                Upload a treasure map screenshot to use as guide:
+                <input type="file" id="screenshotFileInput" />
                 <div>
                     <button onClick="Game.zoomBy(0.8)">ZOOM -</button>
                     <button onClick="Game.zoomBy(1.25)">ZOOM +</button>
@@ -97,7 +99,9 @@
                     Z:
                     <input id="fragmentZ" size="3" />
                     <input id="showLayer1Overlay" type="checkbox" checked />
-                    Draw map
+                    Draw map 1
+                    <input id="showLayer2Overlay" type="checkbox" checked />
+                    Draw map 2
                 </div>
                 <div id="position_info">
                     Hover the mouse to show coordinates
@@ -204,9 +208,20 @@ Found seeds will appear here.</textarea
                 ></canvas>
             </div>
             <div
+                id="treasureScreenshotDiv"
+                class="canvasContainer"
+                style="grid-column: 1 / 3; grid-row: 5 / 6;"
+            >
+                <canvas
+                    id="screenshotMapCanvas"
+                    class="pixelated"
+                    style="width: 100%;"
+                ></canvas>
+            </div>
+            <div
                 id="infoDiv"
                 class="canvasContainer"
-                style="grid-column: 1 / 5; grid-row: 5 / 6;"
+                style="grid-column: 1 / 5; grid-row: 6 / 7;"
             >
                 How to draw the treasure map. Coordinates are very important!
                 Use the horizontal water lines to line up, as they are always
