Improve tresure map river seed finder (treasure.html)
Add automatic screenshot parser using minecraft_screenshot_parser crate

Return only 26-bit candidates if version >= 1.15

--- a/static/treasure.html
+++ b/static/treasure.html
@@ -87,6 +87,7 @@
                         <option value="pencil_ocean">PENCIL OCEAN</option>
                         <option value="pencil_river">PENCIL RIVER</option>
                         <option value="pencil_land">PENCIL LAND</option>
+                        <option value="pencil_unknown">PENCIL UNKNOWN</option>
                         <option value="bucket_ocean">BUCKET OCEAN</option>
                         <option value="bucket_river">BUCKET RIVER</option>
                         <option value="bucket_land">BUCKET LAND</option>
@@ -98,9 +99,9 @@
                     <input id="fragmentX" size="3" />
                     Z:
                     <input id="fragmentZ" size="3" />
-                    <input id="showLayer1Overlay" type="checkbox" checked />
+                    <input id="showLayer1Overlay" type="checkbox" />
                     Draw map 1
-                    <input id="showLayer2Overlay" type="checkbox" checked />
+                    <input id="showLayer2Overlay" type="checkbox" />
                     Draw map 2
                 </div>
                 <div id="position_info">
