--- a/static/biomes.html
+++ b/static/biomes.html
@@ -49,7 +49,7 @@
                 +2^48
             </button>
             <input type="text" id="add2ToTheN" size="2" value="48" />
-            <input type="text" id="lastLayer" size="3" value="43" />
+            <input type="text" id="lastLayer" size="3" value="51" />
             <button id="layerPrev" onClick="updateWithLayerPlus(-1)">-</button>
             <button id="layerNext" onClick="updateWithLayerPlus(+1)">+</button>
             &lt;- Layer controls
@@ -76,10 +76,11 @@
                     TOGGLE GRID
                 </button>
                 <select id="minecraftVersion">
+                    <option value="1.3">Java 1.3 - 1.6</option>
                     <option value="1.7">Java 1.7 - 1.12</option>
                     <option value="1.13">Java 1.13</option>
                     <option value="1.14">Java 1.14</option>
-                    <option value="1.15">Java 1.15</option>
+                    <option value="1.15" selected>Java 1.15 - Java 1.16</option>
                     <option value="TreasureMap13"
                         >Java 1.13-1.14 Treasure Map</option
                     >
@@ -136,6 +137,56 @@
                 );
             }
 
+            let scales13 = [
+                4096,
+                2048,
+                2048,
+                1024,
+                1024,
+                1024,
+                512,
+                512,
+                256,
+                256,
+                256,
+                256,
+                128,
+                64,
+                64,
+                32,
+                32,
+                16,
+                16,
+                16,
+                8,
+                4,
+                4,
+                256,
+                128,
+                64,
+                32,
+                16,
+                8,
+                4,
+                4,
+                4,
+                4,
+                1,
+                1,
+                1,
+                1,
+                1,
+                1,
+                1,
+                1,
+                1,
+                1,
+                1,
+                1,
+                1,
+                1,
+                1,
+            ];
             let scales17 = [
                 4096,
                 2048,
@@ -241,7 +292,9 @@
                 .value;
             {
                 let scales;
-                if (minecraft_version == "1.7") {
+                if (minecraft_version == "1.3") {
+                    scales = scales13;
+                } else if (minecraft_version == "1.7") {
                     scales = scales17;
                 } else if (
                     minecraft_version == "1.13" ||
@@ -257,7 +310,7 @@
                     );
                 }
                 //let i = document.getElementById("lastLayer").value|0;
-                let i = 43;
+                let i = 51;
                 document.getElementById("lastLayer").value = i;
                 if (i >= 0 && i <= 43) {
                     layerScale = scales[i];
@@ -339,6 +392,27 @@
                     minecraft_version = new_v;
                     let lastLayer =
                         document.getElementById("lastLayer").value | 0;
+                    if (new_v == "1.3") {
+                        // Set layer to 33
+                        updateWithLayerPlus(33 - lastLayer);
+                    }
+                    if (old_v == "1.3") {
+                        if (new_v == "1.7") {
+                            // Set layer to 43
+                            updateWithLayerPlus(43 - lastLayer);
+                        }
+                        if (
+                            new_v == "1.13" ||
+                            new_v == "1.14" ||
+                            new_v == "1.15" ||
+                            new_v == "TreasureMap13" ||
+                            new_v == "TreasureMap15"
+                        ) {
+                            // Set layer to 51
+                            updateWithLayerPlus(51 - lastLayer);
+                        }
+                    }
+
                     if (
                         old_v == "1.7" &&
                         (new_v == "1.13" ||
@@ -401,7 +475,10 @@
                 ).value;
                 let scales;
                 let num_layers;
-                if (minecraft_version == "1.7") {
+                if (minecraft_version == "1.3") {
+                    scales = scales13;
+                    num_layers = 33;
+                } else if (minecraft_version == "1.7") {
                     scales = scales17;
                     num_layers = 43;
                 } else if (
