Disable grid by default in biomes.html
It looks better this way

--- a/static/biomes.html
+++ b/static/biomes.html
@@ -864,6 +864,10 @@
             resize();
             let lastLayer = document.getElementById("lastLayer").value | 0;
             startGame(lastLayer, showBiomeAtCursor);
+            Game.afterInit = function() {
+                Game.showGrid = false;
+                document.getElementById("center_button").click();
+            };
             initializeColorToBiomeIdMap();
         </script>
     </body>
